# rust-api

./: .gitignore  Cargo.toml
grpc/: Cargo.toml  build.rs
grpc/examples/: client.rs
grpc/src/: main.rs
src/: main.rs  state.rs
src/middleware/: middleware.rs
src/models/: user.rs
src/routes/: home.rs  mod.rs  user.rs
src/utils/: jwt.rs  mod.rs  password.rs
