[package]
name = "actix-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls", "uuid", "chrono", "macros"] }
uuid = { version = "1", features = ["v4", "serde"] }
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
bcrypt = "0.17"
jsonwebtoken = { version = "10.1", features = ["rust_crypto"] }
futures-util = "0.3"
webex = "0.10.0"